--- a/index.html
+++ b/index.html
@@ -1,14 +1,121 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Emoji Tile Match Memory Game</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Emoji Tile Match Memory Game Terms and Privacy Policy</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      line-height: 1.6;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1, h2, h3 {
+      color: #2c3e50;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 0.5em;
+    }
+    h2 {
+      margin-top: 1.5em;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background: #fff;
+      padding: 20px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    ul {
+      margin-left: 20px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Emoji Tile Match Memory Game</h1>
-  <p>Welcome to Emoji Tile Match Memory Game – a fun, colorful, and brain-boosting experience designed to challenge your memory with emoji tiles!</p>
-  <p>This app is crafted for your entertainment and mental sharpness – no personal data, no tracking, just pure gameplay.</p>
-  <p><a href="terms.html">Read Terms and Privacy Policy</a></p>
+  <div class="container">
+    <h1>Terms and Conditions</h1>
+    <h2>Emoji Tile Match Memory Game Terms and Conditions</h2>
+    <p><strong>2025</strong></p>
+
+    <h3>1. Agreement to Terms</h3>
+    <p>By downloading, installing, or using the app, you agree to these Terms. If you do not agree, please do not use the app.</p>
+
+    <h3>2. Description of the App</h3>
+    <p>Emoji Tile Match Memory Game is a fun memory-matching game using emojis. It’s made for entertainment only and does not provide medical or educational services. Use is at your own risk.</p>
+
+    <h3>3. In-App Purchases and Subscriptions</h3>
+    <ul>
+      <li><strong>Remove Ads Purchase:</strong> A one-time in-app purchase to remove advertisements may be available.</li>
+      <li><strong>Recurring Subscriptions (if introduced):</strong> Auto-renews unless cancelled 24 hours before period ends.</li>
+      <li><strong>Cancellation:</strong> Managed through your app store account settings. No refunds for current period.</li>
+      <li>All transactions are processed securely by your app store provider.</li>
+    </ul>
+
+    <h3>4. Use of the App</h3>
+    <ul>
+      <li><strong>Eligibility:</strong> Minimum age: 16 (or with parental consent).</li>
+      <li><strong>No Account Required:</strong> No login needed. Subscriptions managed via app store only.</li>
+      <li><strong>Permitted Use:</strong> Use only for lawful, personal entertainment. Reverse engineering is prohibited.</li>
+    </ul>
+
+    <h3>5. Disclaimers and Limitation of Liability</h3>
+    <ul>
+      <li><strong>Entertainment Only:</strong> Not intended to diagnose, treat, or cure any condition.</li>
+      <li><strong>No Warranty:</strong> Provided “as is” with no guarantees of uninterrupted use.</li>
+      <li><strong>Liability:</strong> We are not liable for any damages from use of the app.</li>
+    </ul>
+
+    <h3>6. Intellectual Property Rights</h3>
+    <ul>
+      <li><strong>Ownership:</strong> All content belongs to the developer. Personal use only.</li>
+      <li><strong>Restrictions:</strong> You may not copy or modify app content without permission.</li>
+    </ul>
+
+    <h3>7. Termination</h3>
+    <p>We may suspend or terminate your access if these Terms are violated.</p>
+
+    <h3>8. Modifications to the Terms</h3>
+    <p>Terms may be updated from time to time. Continued use means you accept changes.</p>
+
+    <h3>9. Governing Law and Dispute Resolution</h3>
+    <p>These Terms are governed by the laws of Spain. Disputes are resolved in Madrid courts.</p>
+
+    <h3>10. Contact Information</h3>
+    <ul><li><strong>Email:</strong> shish.hamish@gmail.com</li></ul>
+
+    <h1>Privacy Policy</h1>
+    <p>We do not collect or store any personal data. Your usage of the app is anonymous and local to your device.</p>
+
+    <h3>1. Information We Collect</h3>
+    <p><strong>No Personal Data:</strong> We do not collect any personal information.</p>
+
+    <h3>2. Use of Information</h3>
+    <p><strong>No Usage Analytics:</strong> We do not track behavior or collect statistics.</p>
+
+    <h3>3. Cookies and Tracking</h3>
+    <p><strong>No Cookies:</strong> No tracking technologies are used.</p>
+
+    <h3>4. Data Security and Retention</h3>
+    <p>Since no personal data is stored, there are no related concerns or policies needed.</p>
+
+    <h3>5. Third-Party Services</h3>
+    <p>We do not use third-party integrations. Any external links will have their own policies.</p>
+
+    <h3>6. Children’s Privacy</h3>
+    <p>We do not knowingly collect data from children.</p>
+
+    <h3>7. Changes to Privacy Policy</h3>
+    <p>We may update this from time to time. Continued use of the app implies acceptance.</p>
+
+    <h3>8. Contact Us</h3>
+    <ul><li><strong>Email:</strong> shish.hamish@gmail.com</li></ul>
+
+    <p>By using Emoji Tile Match Memory Game, you agree to this Privacy Policy.</p>
+  </div>
 </body>
 </html>
